fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -652,7 +652,7 @@ span{
 .fenix {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
 }
 
